# unix

./: .gitignore  README.md
0_spec/: ARCHITECTURE.md  CHECKLIST.md  DISK_LAYOUT.md  ISOLATION_LAYERS.md  PERSONAL_SPACE.md  README.md  ROADMAP.md  tools_0_minimum.md  tools_1_basic.md
a_alpine_fallback/: build.sh
a_alpine_fallback_usb/: install.tar
a_arch-surface_fallback_desk/: TOOLS.md
a_kinoite_host/: Containerfile  Containerfile.surface  build.sh
a_kubuntu/: README.md  flake.nix
a_nixos_host/: .gitignore  README.md  build.sh  configuration.nix  flake.nix  hardware-configuration.nix
aa_nixos-surface_host/: CHANGES-2026-01-08.md  ISSUES-STATUS.md  build.sh  diagnose-nixos.sh  flake.nix  grub-extra-entries.nix  hardware-configuration.nix  sessions.nix
ab_arch-surface_fallback_desk/: install.json  install.md  install.sh  install_log.md
ab_kali_security/: SETUP.md
ab_ventoy_fallback_usb/: README.md
ac_win11_webcam/: SETUP.md
b_apps/: build.sh
b_mnt/: gcl.json  gcl.sh  mount.json  mount.sh
b_podman_container/: build.sh
b_tools/: Containerfile  build.sh
b_user_diego_nix/: .gitignore  flake.nix
ba_myshell/: OPS.md  SPEC.md  build.sh
cb_user_diego_nix/: build.json  build.sh  container.nix
da_app_cli/: Containerfile  MIGRATION_PLAN.md  README.md  spec.md
da_app_cli/poetry_venv_1/: pyproject.toml
da_app_gui/: Containerfile  README.md  docker-compose.yml  export-apps.sh  setup.sh
db_apps_gui_2/: build.sh  dist_podman
dd_ops_scripts/: file_list.md  sync.json  sync.sh
de_claude-sandbox/: .gitignore  README.md  build.sh
(+189 files in other folders)
